# datasync

./: .gitignore  README.md  config.json  control.json  main.py  main.pyw  publisher.py  pyproject.toml  start_monitor.bat
drivers/: __init__.py  bam1020.py  davis_vantage_pro2.py  thermoiseries.py  vantagepro2.py  winaqms.py
gui/: app.py  measurements_tab.py
services/: __init__.py  data_collector.py  logger.py  publisher.py  winaqms_publisher.py
tests/: README.md  run_tests.py  test_data_collector.py  test_publisher.py  test_winaqms_publisher.py
ui/: __init__.py  app.py  logs_tab.py  measurements_tab.py  services_tab.py
utils/: control.py
